Fix - Overflow en pantalla de depositos y retiros en el modal del componente wallet

--- a/src/components/modal/css/wallet.module.css
+++ b/src/components/modal/css/wallet.module.css
@@ -10,19 +10,20 @@ body {
     justify-content: center;
     align-content: center;
     flex-direction: row;
-    position: absolute;
+    position: fixed;
     background: #041b3bcf;
     z-index: 9999;
+    overflow-x: scroll;
 }
 
 .container {
     background: #111A29;
-    margin-top: -5rem;
+    /* margin-top: -5rem; */
+    /* margin-top: 1rem; */
     width: 90%;
-    height: 90%;
+    height: 100%;
     border-radius: 30px;
     box-shadow: 0px 0px 90px -42px rgba(0, 0, 0, 1);
-    margin-top: 1rem;
     -webkit-box-shadow: 0px 0px 90px -42px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 0px 90px -42px rgba(0, 0, 0, 1);
     -webkit-border-radius: 30px;
@@ -37,6 +38,7 @@ body {
     align-content: center;
     justify-content: center;
     align-items: center;
+    background: #111A29;
 }
 
 .header {
@@ -107,6 +109,7 @@ body {
     align-items: center;
     justify-content: center;
     align-content: center;
+    margin-bottom: 6rem;
 }
 
 .generateWrapper {
